packages/kit/test/apps/basics/src/routes/errors/load-error-code-server.svelte
<script context="module">
	export async function load() {
		return { status: 500 };
	}
</script>
